--- a/app/partials/header.ejs
+++ b/app/partials/header.ejs
@@ -1,7 +1,7 @@
 <nav class="header container d-flex justify-content-between align-items-center">
   <div class="logo">
-    <a href="./" class="py-md-6"><img src="../assets/images/logo.svg"  alt="logo pc" class="logo img-pc d-none d-md-inline-block"></a>
-    <a href="./" class="py-6 py-md-0"><img src="../assets/images/logo2.svg" alt="logo mobile" class="logo img-mobile d-md-none"></a>
+    <a href="/" class="py-md-6"><img src="./assets/images/logo.svg"  alt="logo pc" class="logo img-pc d-none d-md-inline-block"></a>
+    <a href="/" class="py-6 py-md-0"><img src="./assets/images/logo2.svg" alt="logo mobile" class="logo img-mobile d-md-none"></a>
   </div>
 
   <div>
@@ -18,7 +18,7 @@
         </li>
       </ul>
     </div>
-    <!-- <a href="#" class="burgar_btn d-block d-md-none text-center px-6"><i class="fas fa-bars"></i></a> -->
+
     <div class="dropdown">
       <a class="burgar_btn d-block d-md-none" role="button" href="#collapseMenu" data-bs-toggle="collapse"><i class="fas fa-bars"></i></a>
     </div>
