--- a/app/partials/header.ejs
+++ b/app/partials/header.ejs
@@ -1,20 +1,20 @@
 <nav class="header container d-flex justify-content-between align-items-center">
   <div class="logo">
-    <a href="./" class="py-md-6"><img src="./assets/images/logo.svg"  alt="logo pc" class="logo img-pc d-none d-md-inline-block"></a>
-    <a href="./" class="py-6 py-md-0"><img src="./assets/images/logo2.svg" alt="logo mobile" class="logo img-mobile d-md-none"></a>
+    <a href="./" class="hvr-bounce-in py-md-6"><img src="./assets/images/logo.svg"  alt="logo pc" class="logo img-pc d-none d-md-inline-block"></a>
+    <a href="./" class="hvr-bounce-in py-6 py-md-0"><img src="./assets/images/logo2.svg" alt="logo mobile" class="logo img-mobile d-md-none"></a>
   </div>
 
   <div>
     <div class="navbar py-0 d-none d-md-block">
       <ul class="d-flex align-items-center">
         <li>
-          <a href="./" class="text-light py-8 px-6 fz-7">首頁</a>
+          <a href="./" class="hvr-bounce-in text-light py-8 px-6 fz-7">首頁</a>
         </li>
         <li>
-          <a href="./course.html" class="text-light py-8 px-6 fz-7">課程介紹</a>
+          <a href="./course.html" class="hvr-bounce-in text-light py-8 px-6 fz-7">課程介紹</a>
         </li>
         <li>
-          <a href="#myLogin" role="button" data-bs-toggle="modal" class="text-light py-8 px-6 fz-7"><span class="material-icons align-bottom mr-2">account_circle</span>登入</a>
+          <a href="#myLogin" role="button" data-bs-toggle="modal" class="hvr-bounce-in text-light py-8 px-6 fz-7"><span class="material-icons align-bottom mr-2">account_circle</span>登入</a>
         </li>
       </ul>
     </div>
