--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -9,7 +9,7 @@
     <header class="bg-aztec sticky-top">
       <%- include('./partials/header'); %>
     </header>
-    <div class="collapse" id="collapseMenu">
+    <div class="bg-aztec collapse stickyHeader" id="collapseMenu">
       <ul class="d-flex flex-column align-items-center bg-aztec py-3">
         <li><a class="py-3 px-20 text-light" href="./">首頁</a></li>
         <li><a class="py-3 px-20 text-light" href="./course.html">課程介紹</a></li>
