--- a/app/partials/header.ejs
+++ b/app/partials/header.ejs
@@ -8,13 +8,13 @@
     <div class="navbar py-0 d-none d-md-block">
       <ul class="d-flex align-items-center">
         <li>
-          <a href="./" class="hvr-bounce-in text-light py-8 px-6 fz-7">首頁</a>
+          <a href="./" class="shake-slow text-light py-8 px-6 fz-7">首頁</a>
         </li>
         <li>
-          <a href="./course.html" class="hvr-bounce-in text-light py-8 px-6 fz-7">課程介紹</a>
+          <a href="./course.html" class="shake-slow text-light py-8 px-6 fz-7">課程介紹</a>
         </li>
         <li>
-          <a href="#myLogin" role="button" data-bs-toggle="modal" class="hvr-bounce-in text-light py-8 px-6 fz-7"><span class="material-icons align-bottom mr-2">account_circle</span>登入</a>
+          <a href="#myLogin" role="button" data-bs-toggle="modal" class="shake-slow text-light py-8 px-6 fz-7"><span class="material-icons align-bottom mr-2">account_circle</span>登入</a>
         </li>
       </ul>
     </div>
