--- a/app/partials/head.ejs
+++ b/app/partials/head.ejs
@@ -9,5 +9,6 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 <link href="./assets/style/helpers/hover-min.css" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="https://csshake.surge.sh/csshake.min.css">
 
 <link rel="stylesheet" href="./assets/style/all.css">
