--- a/app/assets/style/pages/_index.scss
+++ b/app/assets/style/pages/_index.scss
@@ -310,6 +310,21 @@
     @include pc {
       height: 100%;
     }
+    &-outer::after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      border: 1px solid $bitter;
+      border-radius: 24px;
+      left: -5px;
+      top: 5px;
+      z-index: -1;
+      @include pc {
+        left: -10px;
+        top: 10px;
+      }
+    }
   }
 
   &-item {
