--- a/app/assets/style/helpers/_vars.scss
+++ b/app/assets/style/helpers/_vars.scss
@@ -57,3 +57,14 @@ $mark-padding:                none !default;
 $line-height-40px: 40px;
 
 $card-height: 100%;
+
+$progress-bg: $silver;
+$card-bg: $aztec;
+$card-color: $light;
+
+$input-padding-y: 8px;
+$input-padding-x: 16px;
+$input-font-size: 16px;
+$input-bg: $asphalt;
+$input-border-color: $light !default;
+$input-placeholder-color: $silver !default;
