--- a/app/assets/style/pages/_index.scss
+++ b/app/assets/style/pages/_index.scss
@@ -16,6 +16,10 @@
   height: 10px;
   background-color: #fff;
 }
+.icon-size-20 {
+  width: 20px;
+  height: 20px;
+}
 .icon-size-32 {
   width: 32px;
   height: 32px;
@@ -24,9 +28,21 @@
   width: 24px;
   height: 24px;
 }
-.icon-size {
+.icon-size-48 {
+  width: 48px;
+  height: 48px;
+}
+.icon-size-50 {
   width: 50px;
   height: 50px;
+}
+.icon-size-100 {
+  width: 100px;
+  height: 100px;
+}
+.book-icon {
+  width: 100px;
+  height: 80px;
 }
 .avatar-size {
   width: 80px;
@@ -36,10 +52,7 @@
     height: 100px;
   }
 }
-.book-icon {
-  width: 100px;
-  height: 80px;
-}
+
 .fz-80-px{
   font-size: 80px;
 }
@@ -47,23 +60,9 @@
 .border-transparent {
   border: 1px solid transparent;
 }
-.radius-4 {
-  border-radius: 4px;
-}
-.radius-8 {
-  border-radius: 8px;
-}
-.radius-12 {
-  border-radius: 12px;
-}
-.radius-24 {
-  border-radius: 24px;
-}
+
 .radius-bottom-left-0 {
   border-bottom-left-radius: 0;
-}
-.radius-circle {
-  border-radius: 50%;
 }
 
 .title-border-middle{
@@ -205,16 +204,19 @@
     }
   }
 }
-
-.improve-item-1{
-  background-image: url("../images/info01.jpg");
-  background-size: cover;
+@mixin improve-item-base {
   box-shadow: 0 615px rgba(28, 28, 28, 0.8) inset;
   transition: .5s;
   &:hover{
     box-shadow: 0 615px rgba(26, 26, 26, 0.12) inset;
     @include improve__hover;
   }
+}
+
+.improve-item-1{
+  background-image: url("../images/info01.jpg");
+  background-size: cover;
+  @include improve-item-base;
   @include pc {
     height: 615px;
   }
@@ -222,12 +224,7 @@
 .improve-item-2{
   background: url("../images/info02.jpg");
   background-size: cover;
-  box-shadow: 0 615px rgba(28, 28, 28, 0.8) inset;
-  transition: .5s;
-  &:hover{
-    box-shadow: 0 615px rgba(26, 26, 26, 0.12) inset;
-    @include improve__hover;
-  }
+  @include improve-item-base;
   @include pc {
     height: 615px;
   }
@@ -235,12 +232,7 @@
 .improve-item-3{
   background: url("../images/info03.jpg");
   background-size: cover;
-  box-shadow: 0 615px rgba(28, 28, 28, 0.8) inset;
-  transition: .5s;
-  &:hover{
-    box-shadow: 0 615px rgba(26, 26, 26, 0.12) inset;
-    @include improve__hover;
-  }
+  @include improve-item-base;
   @include pc {
     height: 615px;
   }
@@ -248,12 +240,7 @@
 .improve-item-4{
   background: url("../images/info04.jpg");
   background-size: cover;
-  box-shadow: 0 615px rgba(28, 28, 28, 0.8) inset;
-  transition: .5s;
-  &:hover{
-    box-shadow: 0 615px rgba(26, 26, 26, 0.12) inset;
-    @include improve__hover;
-  }
+  @include improve-item-base;
   @include pc {
     height: 615px;
   }
