--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -33,12 +33,12 @@
           <div class="modal-body mx-auto">
             <form class="form text-start mb-12">
               <label for="myMail">信箱</label><br>
-              <input class="mt-2 mb-6 fz-8 py-2 px-4 bg-transparent border border-light radius-4 w-100" id="myMail" name="myMail" type="email" placeholder="請輸入信箱"><br>
+              <input class="mt-2 mb-6 fz-8 py-2 px-4 bg-transparent border border-light rounded-1 w-100" id="myMail" name="myMail" type="email" placeholder="請輸入信箱"><br>
 
               <label for="myPwd">密碼</label><br>
-              <input class="mt-2 mb-6 fz-8 py-2 px-4 bg-transparent border border-light radius-4 w-100" id="myPwd" name="myPwd" type="password" placeholder="請輸入密碼"><br>
+              <input class="mt-2 mb-6 fz-8 py-2 px-4 bg-transparent border border-light rounded-1 w-100" id="myPwd" name="myPwd" type="password" placeholder="請輸入密碼"><br>
 
-              <button type="submit" class="bg-gradient w-100 py-2 text-light radius-8 border-0 fz-7">登入</button>
+              <button type="submit" class="bg-gradient w-100 py-2 text-light rounded-2 border-0 fz-7">登入</button>
             </form>
 
             <div class="position-relative pb-4">
@@ -46,20 +46,24 @@
               <div class="px-4 bg-aztec text-silver position-absolute top-0 left-50 translate-middle word-nowrap">其他登入方式</div>
             </div>
 
-            <a role="button" href="#" class="btn btn-outline-light mb-6 py-2 px-8 w-100 radius-4 position-relative"><img src="./assets/images/icon_fb.svg" class="icon-size-24 position-absolute social-icon" alt="fb-icon">Facebook 登入</a>
+            <a role="button" href="#" class="btn btn-outline-light mb-6 py-2 px-8 w-100 rounded-1 position-relative"><img src="./assets/images/icon_fb.svg" class="icon-size-24 position-absolute social-icon" alt="fb-icon">Facebook 登入</a>
 
-            <a role="button" href="#" class="btn btn-outline-light mb-12 py-2 px-8 w-100 radius-4 position-relative"><img src="./assets/images/icon_google.svg" class="icon-size-24 position-absolute social-icon" alt="fb-icon">Google 登入</a>
+            <a role="button" href="#" class="btn btn-outline-light mb-12 py-2 px-8 w-100 rounded-1 position-relative"><img src="./assets/images/icon_google.svg" class="icon-size-24 position-absolute social-icon" alt="fb-icon">Google 登入</a>
 
           </div>
         </div>
       </div>
     </div>
 
+    <!-- 輪播swiper -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script src="./assets/js/vendors.js"></script>
 
+    <!-- 日曆 -->
     <script src="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.2.0/dist/js/datepicker.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.2.0/dist/js/locales/zh-TW.js"></script>
+
+    <!-- 動畫特效 -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
     <script src="./assets/js/all.js"></script>
