信用卡付款的選擇方式 改成點擊後固定

--- a/app/assets/style/pages/_pay.scss
+++ b/app/assets/style/pages/_pay.scss
@@ -100,3 +100,14 @@
 .pb-276-px {
   padding-bottom: 276px;
 }
+
+.payStyle:hover {
+  border-color: $primary;
+  color: $primary;
+  background-color: transparent;
+}
+.payStyle.checked {
+  border-color: $primary;
+  color: $primary;
+  background-color: transparent;
+}
