--- a/app/partials/header.ejs
+++ b/app/partials/header.ejs
@@ -20,7 +20,7 @@
     </div>
 
     <div class="dropdown">
-      <a class="burgar_btn d-block d-md-none" role="button" href="#collapseMenu" data-bs-toggle="collapse"><i class="fas fa-bars"></i></a>
+      <a class="burgar_btn d-block d-md-none" role="button" href="#collapseMenu" data-bs-toggle="collapse"><span class="material-icons">drag_handle</span></a>
     </div>
   </div>
 </nav>
