--- a/app/partials/header.ejs
+++ b/app/partials/header.ejs
@@ -1,8 +1,9 @@
 <nav class="header container d-flex justify-content-between align-items-center">
-  <div class="logo">
+  <!-- 會建議把 logo 放 <h1> 標籤，因為一個網站只能有也必須要有一個 <h1> ，而課程介紹便沒有適合放置 <h1> 的地方，所以建議在 logo 的地方放 <h1> 。 -->
+  <h1 class="logo">
     <a href="./" class="hvr-bounce-in py-md-6"><img src="./assets/images/logo.svg"  alt="logo pc" class="logo img-pc d-none d-md-inline-block"></a>
     <a href="./" class="hvr-bounce-in py-6 py-md-0"><img src="./assets/images/logo2.svg" alt="logo mobile" class="logo img-mobile d-md-none"></a>
-  </div>
+  </h1>
 
   <div>
     <div class="navbar py-0 d-none d-md-block">
