--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -32,11 +32,11 @@
           </div>
           <div class="modal-body mx-auto">
             <form class="form text-start mb-12">
-              <label for="myMail">信箱</label><br>
-              <input class="mt-2 mb-6 fz-8 py-2 px-4 bg-transparent border border-light rounded-1 w-100" id="myMail" name="myMail" type="email" placeholder="請輸入信箱"><br>
+              <label for="myMail" class="form-label">信箱</label><br>
+              <input class="form-control mt-2 mb-6 fz-8 py-2 px-4 bg-transparent border border-light rounded-1 w-100" id="myMail" name="myMail" type="email" placeholder="請輸入信箱"><br>
 
-              <label for="myPwd">密碼</label><br>
-              <input class="mt-2 mb-6 fz-8 py-2 px-4 bg-transparent border border-light rounded-1 w-100" id="myPwd" name="myPwd" type="password" placeholder="請輸入密碼"><br>
+              <label for="myPwd"  class="form-label">密碼</label><br>
+              <input class="form-control mt-2 mb-6 fz-8 py-2 px-4 bg-transparent border border-light rounded-1 w-100" id="myPwd" name="myPwd" type="password" placeholder="請輸入密碼"><br>
 
               <button type="submit" class="bg-gradient w-100 py-2 text-light rounded-2 border-0 fz-7">登入</button>
             </form>
